Reworked the base "pose" (i'm gonna call anything that isn't a special action a pose instead of an "animation") Started reworking climbing pose Added a jumping and flying pose

--- a/src/main/resources/assets/let_me_move/lang/en_US.lang
+++ b/src/main/resources/assets/let_me_move/lang/en_US.lang
@@ -1,4 +1,6 @@
 LMM.animation.standing=Stand
+LMM.animation.jumping=Jumping
+LMM.animation.flying=Flying
 LMM.animation.crouching=Crouch
 LMM.animation.swimming=Swim
 LMM.animation.diving=Dive
