Added walking, running and crawling animation Added Eating animation
closes https://github.com/BTW-Community/Let-Me-Move/issues/20

--- a/src/main/resources/assets/let_me_move/lang/en_US.lang
+++ b/src/main/resources/assets/let_me_move/lang/en_US.lang
@@ -1,14 +1,17 @@
-LMM.animation.standing=Stand
-LMM.animation.jumping=Jump
-LMM.animation.flying=Fly
-LMM.animation.crouching=Crouch
-LMM.animation.swimming=Swim
-LMM.animation.diving=Dive
-LMM.animation.rolling=Roll
-LMM.animation.dashing=Dash
-LMM.animation.skyDiving=Sky Dive
-LMM.animation.lowFalling=Fall
-LMM.animation.highFalling=High Fall
 LMM.animation.climbing=Climb
+LMM.animation.crawling=Crawl
+LMM.animation.crouching=Crouch
+LMM.animation.dashing=Dash
+LMM.animation.diving=Dive
+LMM.animation.lowFalling=Fall
+LMM.animation.flying=Fly
+LMM.animation.highFalling=High Fall
+LMM.animation.jumping=Jump
 LMM.animation.pullingUp=Pull Up
+LMM.animation.rolling=Roll
+LMM.animation.running=Run
+LMM.animation.skyDiving=Sky Dive
 LMM.animation.wallSliding=Slide
+LMM.animation.standing=Stand
+LMM.animation.swimming=Swim
+LMM.animation.walking=Walk
